header tags issues, spacing and alignment issues

--- a/app/assets/styles/modules/_courseFaq.scss
+++ b/app/assets/styles/modules/_courseFaq.scss
@@ -8,26 +8,31 @@
 
     h2 {
         font-size: 1.75rem;
-        display: inline-block;
+        display: block;
         color: $primaryColor;
         font-weight: bold;
         letter-spacing: .3px;
+        margin: auto;
         margin-bottom: 30px;
         position: relative;
+        
+        max-width: 1170px;
+        text-align: center;
     
         @include atSize850 {
             font-size: 2rem; 
+            text-align: left;
         }
-        &::after {
-            content: '';
-            display: block;
-            width: 6%;
-            height: 3.5px;
-            border-radius: 1.5px;
-            background-color: $titlePink;
-            position: absolute;
-            left: -3px;
-        }
+        // &::after {
+        //     content: '';
+        //     display: block;
+        //     width: 37%;
+        //     height: 3.5px;
+        //     border-radius: 1.5px;
+        //     background-color: $titlePink;
+        //     position: absolute;
+        //     right: -3px;            
+        // }
      }
 
     .wrapper {
