--- a/app/assets/styles/modules/_courseTeamSection.scss
+++ b/app/assets/styles/modules/_courseTeamSection.scss
@@ -23,18 +23,30 @@
     }
 
     h2 {
-        font-weight: bold;
-        font-size: 1.5rem;
-        line-height: 1.33;
-        letter-spacing: .2px;
-        text-align: center;
-        margin-bottom: 28px;
+        font-size: 1.75rem;
+                display: inline-block;
+                color: $primaryColor;
+                font-weight: bold;
+                letter-spacing: .3px;
+                margin-bottom: 30px;
+                position: relative;
+                text-align: center;
 
-        @include atSize850 {
-            font-size: 2rem;
-            text-align: left;
-            margin-bottom: 40px;
-        }
+                @include atSize850 {
+                    font-size: 2rem;
+                    text-align: left; 
+                }
+
+                &::after {
+                    content: '';
+                    display: block;
+                    width: 32%;
+                    height: 3.5px;
+                    border-radius: 1.5px;
+                    background-color: $titlePink;
+                    position: absolute;
+                    left: -3px;
+                }
     }
 
     .owl-stage-outer {
