--- a/app/assets/styles/modules/_homePage.scss
+++ b/app/assets/styles/modules/_homePage.scss
@@ -2101,6 +2101,7 @@
   .popular-courses {
 	  position:relative;
 	  top:20px;
+	  margin-bottom: 30px;
 	  @include atSize479{
 		  //padding-top:80px;
 	  }
@@ -2132,15 +2133,15 @@
 	  }
 	  h2 {
 		  font-size: 42px;
-			color: $primaryColor;
-			text-align: center;
-			font-size: 36px; 
+			color: $primaryColor;			
+			text-align:center;
+			font-weight: bold;
 			position: relative;
 			top: 0px;
 			z-index: 99;
 			@include atSize424 {
-			  font-size: 28px;
-		  }
+				font-size: 2rem;  
+			}
 	  }
 	  h3 {
 		  font-size: 16px;
