--- a/app/assets/styles/modules/_howLearnSection.scss
+++ b/app/assets/styles/modules/_howLearnSection.scss
@@ -17,7 +17,7 @@
         &::after {
             content: '';
             display: block;
-            width: 6%;
+            width: 30%;
             height: 3.5px;
             border-radius: 1.5px;
             background-color: $titlePink;
