--- a/app/assets/styles/modules/_whyCourse.scss
+++ b/app/assets/styles/modules/_whyCourse.scss
@@ -23,7 +23,7 @@
         &::after {
             content: '';
             display: block;
-            width: 6%;
+            width: 23%;
             height: 3.5px;
             border-radius: 1.5px;
             background-color: #fff;
